--- a/supervisionado_diabetes.ipynb
+++ b/supervisionado_diabetes.ipynb
@@ -7,6 +7,7 @@
       "version": "0.3.2",
       "provenance": [],
       "collapsed_sections": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -81,7 +82,7 @@
       "source": [
         "df.info()"
       ],
-      "execution_count": 80,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -273,7 +274,7 @@
         "%%time\n",
         "knn_func(10)"
       ],
-      "execution_count": 85,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -322,17 +323,17 @@
       "metadata": {
         "id": "kfNvJDFXI-2p",
         "colab_type": "code",
+        "outputId": "99d24155-0fc1-494a-a1e2-97a50ceb3c20",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 101
-        },
-        "outputId": "99d24155-0fc1-494a-a1e2-97a50ceb3c20"
+        }
       },
       "cell_type": "code",
       "source": [
         "split_data(knn, df.drop(columns='Diagnóstico'), df['Diagnóstico'], print_res=True)"
       ],
-      "execution_count": 87,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -403,7 +404,7 @@
         "CV.fit(df.drop(columns='Diagnóstico'),df['Diagnóstico'])\n",
         "print(CV.best_params_)"
       ],
-      "execution_count": 89,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -441,7 +442,7 @@
       "source": [
         "dtc.get_params"
       ],
-      "execution_count": 91,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -476,7 +477,7 @@
       "source": [
         "split_data(dtc, df.drop(columns='Diagnóstico'), df['Diagnóstico'], print_res=True)"
       ],
-      "execution_count": 92,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -528,7 +529,7 @@
         "l=len(df.columns)-1\n",
         "l"
       ],
-      "execution_count": 93,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -570,7 +571,7 @@
         "  sns.distplot(df.iloc[:, n], ax=ax[3], color='g')\n",
         "  n+=1\n"
       ],
-      "execution_count": 94,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -637,7 +638,7 @@
         "plt.figure(figsize=(12,10))\n",
         "g = sns.heatmap(df.corr(),annot=True, cmap='rainbow')"
       ],
-      "execution_count": 95,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
@@ -681,7 +682,7 @@
         "#GaussianNB\n",
         "split_data(gnb, df.drop(columns='Diagnóstico'), df['Diagnóstico'], print_res=True)"
       ],
-      "execution_count": 97,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -752,11 +753,11 @@
       "metadata": {
         "id": "58D_6q0290Zq",
         "colab_type": "code",
+        "outputId": "4afe8839-cfca-416b-f71c-d304d77ca3a4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
-        },
-        "outputId": "4afe8839-cfca-416b-f71c-d304d77ca3a4"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -764,7 +765,7 @@
         "gscv.fit(df.drop(columns='Diagnóstico'),df['Diagnóstico'])\n",
         "print(gscv.best_params_)"
       ],
-      "execution_count": 107,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -802,7 +803,7 @@
       "source": [
         "split_data(mlp, df.drop(columns='Diagnóstico'), df['Diagnóstico'], print_res=True)"
       ],
-      "execution_count": 109,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -827,6 +828,355 @@
           "execution_count": 109
         }
       ]
+    },
+    {
+      "metadata": {
+        "id": "tAyZ7QV1WizF",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "# MLP"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "Zoq4H7NcWsPh",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "from tensorflow.keras.optimizers import Adam, SGD\n",
+        "from tensorflow.keras.models import Sequential\n",
+        "from tensorflow.keras.layers import Dense\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "import pandas as pd\n",
+        "import numpy"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "-ir_pYeHW8lR",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 238
+        },
+        "outputId": "e3e673a3-9a92-4550-82df-b5effbc5b848"
+      },
+      "cell_type": "code",
+      "source": [
+        "data_url = 'https://raw.githubusercontent.com/carvalheirafc/deep_learning_stuff/master/neural_networks/diabetes/diabetes_pca_result.csv'\n",
+        "\n",
+        "df = pd.read_csv(data_url)\n",
+        "\n",
+        "features = df.drop('Diagnóstico', axis = 1)\n",
+        "target = df['Diagnóstico']\n",
+        "\n",
+        "\n",
+        "print('Data Shape:', features.shape)\n",
+        "print('Labels/Target:', target.shape)\n",
+        "df.describe().transpose()"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Data Shape: (768, 4)\n",
+            "Labels/Target: (768,)\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>count</th>\n",
+              "      <th>mean</th>\n",
+              "      <th>std</th>\n",
+              "      <th>min</th>\n",
+              "      <th>25%</th>\n",
+              "      <th>50%</th>\n",
+              "      <th>75%</th>\n",
+              "      <th>max</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>Component 1</th>\n",
+              "      <td>768.0</td>\n",
+              "      <td>-6.693141e-17</td>\n",
+              "      <td>1.711960</td>\n",
+              "      <td>-5.587340</td>\n",
+              "      <td>-1.027072</td>\n",
+              "      <td>0.152931</td>\n",
+              "      <td>1.095689</td>\n",
+              "      <td>5.963579</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Component 2</th>\n",
+              "      <td>768.0</td>\n",
+              "      <td>-6.071532e-17</td>\n",
+              "      <td>1.318184</td>\n",
+              "      <td>-2.955806</td>\n",
+              "      <td>-1.007096</td>\n",
+              "      <td>-0.225966</td>\n",
+              "      <td>0.959128</td>\n",
+              "      <td>3.606582</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Component 3</th>\n",
+              "      <td>768.0</td>\n",
+              "      <td>-3.324887e-17</td>\n",
+              "      <td>1.015629</td>\n",
+              "      <td>-3.203088</td>\n",
+              "      <td>-0.646496</td>\n",
+              "      <td>-0.103940</td>\n",
+              "      <td>0.549774</td>\n",
+              "      <td>4.754503</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Component 4</th>\n",
+              "      <td>768.0</td>\n",
+              "      <td>2.349105e-18</td>\n",
+              "      <td>0.966941</td>\n",
+              "      <td>-2.192185</td>\n",
+              "      <td>-0.664677</td>\n",
+              "      <td>-0.115829</td>\n",
+              "      <td>0.543242</td>\n",
+              "      <td>4.125987</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Diagnóstico</th>\n",
+              "      <td>768.0</td>\n",
+              "      <td>3.489583e-01</td>\n",
+              "      <td>0.476951</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>0.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "      <td>1.000000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "             count          mean       std       min       25%       50%  \\\n",
+              "Component 1  768.0 -6.693141e-17  1.711960 -5.587340 -1.027072  0.152931   \n",
+              "Component 2  768.0 -6.071532e-17  1.318184 -2.955806 -1.007096 -0.225966   \n",
+              "Component 3  768.0 -3.324887e-17  1.015629 -3.203088 -0.646496 -0.103940   \n",
+              "Component 4  768.0  2.349105e-18  0.966941 -2.192185 -0.664677 -0.115829   \n",
+              "Diagnóstico  768.0  3.489583e-01  0.476951  0.000000  0.000000  0.000000   \n",
+              "\n",
+              "                  75%       max  \n",
+              "Component 1  1.095689  5.963579  \n",
+              "Component 2  0.959128  3.606582  \n",
+              "Component 3  0.549774  4.754503  \n",
+              "Component 4  0.543242  4.125987  \n",
+              "Diagnóstico  1.000000  1.000000  "
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "zp7bPrQMXCDh",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "def create_a_sequential_model(inputs, labels, offset = 1):\n",
+        "  size = ((inputs + labels) // 2 ) * offset \n",
+        "  network = Sequential()\n",
+        "\n",
+        "    \n",
+        "  network.add(Dense(units=size, activation='relu', input_shape=(inputs,), kernel_initializer='random_uniform', bias_initializer='ones'))\n",
+        "\n",
+        "    \n",
+        "  network.add(Dense(units=size, activation='relu', input_shape=(inputs,), kernel_initializer='random_uniform', bias_initializer='ones'))\n",
+        "  network.add(Dense(units=1, activation='sigmoid'))\n",
+        "  \n",
+        "  return network"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "XFiGbmGTXASC",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "def model_train(model, optimizer, X, y, iterations):\n",
+        "  \n",
+        "  X_train, X_test, y_train, y_test = train_test_split(X, \n",
+        "                                                      y, \n",
+        "                                                      test_size=0.33, \n",
+        "                                                      random_state=63)\n",
+        "  \n",
+        "  cvscores = []\n",
+        "  prediction_acc = []\n",
+        "  \n",
+        "  model.compile(loss='mse', optimizer=optimizer, metrics=['accuracy', 'mse'])\n",
+        "  for it in range(iterations):\n",
+        "    history = model.fit(X_train, y_train, epochs=50, verbose=0)\n",
+        "    scores = model.evaluate(X_test, y_test, verbose=0)\n",
+        "    prediction = model.predict(X_test)\n",
+        "    #print(scores)\n",
+        "    prediction_acc.append((prediction, y_test))\n",
+        "  \n",
+        "  cvscores.append(scores[1] * 100)\n",
+        "  mean_accuracy = numpy.mean(cvscores)\n",
+        "  print(\"%.2f%% (+/- %.2f%%)\" % (numpy.mean(cvscores), numpy.std(cvscores)))\n",
+        "  \n",
+        "  return mean_accuracy"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "BkPv35klXkdt",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "# With K-fold\n",
+        "def model_train_predict(optimizer, seed, X, y, iterations=50):\n",
+        "  network = create_a_sequential_model(X.shape[1], 2, 4)\n",
+        "  \n",
+        "  k_fold = StratifiedKFold(n_splits=10, shuffle=True, random_state=seed)\n",
+        "  cvscores = []\n",
+        "  class_prediction, y_test = [], []\n",
+        "  \n",
+        "  network.compile(loss='mse', optimizer=optimizer, metrics=['accuracy', 'mse'])\n",
+        "  \n",
+        "  for train, test in k_fold.split(X, y):\n",
+        "    history = network.fit(X[train], y[train], epochs=iterations, batch_size=10, verbose=2)\n",
+        "  \n",
+        "    scores = network.evaluate(X[test], y[test], verbose=1)\n",
+        "    class_prediction.append(network.predict_classes(X[test]))\n",
+        "    y_test.append(y[test])\n",
+        "    \n",
+        "    print(scores)\n",
+        "    cvscores.append(scores[1] * 100)\n",
+        "\n",
+        "  print(\"%.2f%% (+/- %.2f%%)\" % (numpy.mean(cvscores), numpy.std(cvscores)))\n",
+        "  return history, class_prediction, y_test"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "pzMm6T1fYVmA",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "### Testing the best parameters"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "JeMqdVzzXEpq",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "sequential_model = create_a_sequential_model(features.shape[1], 2)\n",
+        "sgd_custom = SGD(lr=0.1, decay=1e-6, momentum=0.8, nesterov=True)\n",
+        "\n",
+        "learning = [0.1, 0.001, 0.0001]\n",
+        "offset = [1, 2, 4]\n",
+        "ite = [100, 1000]\n",
+        "\n",
+        "scores = []\n",
+        "\n",
+        "for it in ite: \n",
+        "  print('>>> Iteratitons: '+str(it))\n",
+        "  for lr in learning:\n",
+        "    print('>>> Learning Rate: '+str(lr))\n",
+        "    for os in offset:\n",
+        "      print('>>> HiddenLayer Size ' +str((((features.shape[1] + 2) // 2 )* os)))\n",
+        "      sgd_custom = SGD(lr=lr, decay=1e-6, momentum=0.8, nesterov=True)\n",
+        "      acc = model_train(sequential_model, sgd_custom, features, target, it)\n",
+        "      temp_list = [it, lr, os]\n",
+        "      scores.append((temp_list, acc))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "3aJR4yYgXIsU",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "scores.sort(key= lambda x: x[1], reverse=True)\n",
+        "scores"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "4m9m11oGYZwJ",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "### Using the best parameters"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "vIccDFI6YfFh",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
